# W4GNS-Logger-AI

./: .gitignore  ADIF_DATA_SOURCES.md  BUILDING_C_EXTENSIONS.md  CHANGELOG_NEXT_IMPROVEMENTS.md  COMPLETE_OPTIMIZATION_SESSION_SUMMARY.md  C_EXTENSION_IMPLEMENTATION_SUMMARY.md  C_OPTIMIZATION_OPPORTUNITIES.md  GENERATOR_FUNCTIONS_ANALYSIS.md  HYPERTHREADING_ANALYSIS.md  HYPERTHREADING_SUMMARY.md  IMPROVEMENTS.md  LICENSE  NEXT_FUNCTION_OPPORTUNITIES.md  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  SESSION_SUMMARY.md  STREAMING_IMPROVEMENTS_SUMMARY.md  pyproject.toml  setup.py  tox.ini
.ai/: README.md  coding-guidelines.md  quick-reference.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: benchmark_c_extensions.py
examples/: hyperthreading_optimization.py
tests/: conftest.py  test_adif.py  test_awards.py  test_awards_config.py  test_storage.py
w4gns_logger_ai/: __init__.py  adif.py  ai_helper.py  awards.py  cli.py  gui.py  models.py  parallel_utils.py  storage.py
w4gns_logger_ai/c_extensions/: __init__.py  c_adif_export.pyx  c_adif_parser.pyx  c_awards.pyx
